--- a/styles.css
+++ b/styles.css
@@ -578,7 +578,7 @@ button:hover {
 /* Portfolio Container */
 .portfolio-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(4, 1fr));
+    grid-template-columns: repeat(4, 1fr));
     gap: 50px;
     max-width: 1200px;
     margin: 0 auto;
@@ -588,7 +588,7 @@ button:hover {
 .project {
     background: #fff;
      border: 2px solid #ddd;
-    padding: 20px;
+    border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
